Use a custom name for coffin pole/corner storage
This is going to be useful for handling global coffins.

--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -1681,9 +1681,9 @@
 %   The corners and poles of the coffin can now be rotated around the
 %    origin. This is best achieved using mapping functions.
 %    \begin{macrocode}
-    \prop_map_inline:cn { l_@@_corners_ \@@_to_value:N #1 _prop }
+    \prop_map_inline:cn { coffin ~ \@@_to_value:N #1 ~ corners }
       { \@@_rotate_corner:Nnnn #1 {##1} ##2 }
-    \prop_map_inline:cn { l_@@_poles_ \@@_to_value:N #1 _prop }
+    \prop_map_inline:cn { coffin ~ \@@_to_value:N #1 ~ poles }
       { \@@_rotate_pole:Nnnnnn #1 {##1} ##2 }
 %    \end{macrocode}
 %   The bounding box of the coffin needs to be rotated, and to do this
@@ -1736,9 +1736,9 @@
 %   The final task is to move the poles and corners such that they are
 %   back in alignment with the box reference point.
 %    \begin{macrocode}
-    \prop_map_inline:cn { l_@@_corners_ \@@_to_value:N #1 _prop }
+    \prop_map_inline:cn { coffin ~ \@@_to_value:N #1 ~ corners }
       { \@@_shift_corner:Nnnn #1 {##1} ##2 }
-    \prop_map_inline:cn { l_@@_poles_ \@@_to_value:N #1 _prop }
+    \prop_map_inline:cn { coffin ~ \@@_to_value:N #1 ~ poles }
       { \@@_shift_pole:Nnnnnn #1 {##1} ##2 }
   }
 \cs_generate_variant:Nn \coffin_rotate:Nn { c }
@@ -1787,7 +1787,7 @@
 \cs_new_protected:Npn \@@_rotate_corner:Nnnn #1#2#3#4
   {
     \@@_rotate_vector:nnNN {#3} {#4} \l_@@_x_dim \l_@@_y_dim
-    \prop_put:cnx { l_@@_corners_ \@@_to_value:N #1 _prop } {#2}
+    \prop_put:cnx { coffin ~ \@@_to_value:N #1 ~ corners } {#2}
       { { \dim_use:N \l_@@_x_dim } { \dim_use:N \l_@@_y_dim } }
   }
 %    \end{macrocode}
@@ -1858,7 +1858,7 @@
     \dim_set:Nn \l_@@_right_corner_dim { -\c_max_dim }
     \dim_set:Nn \l_@@_bottom_corner_dim { \c_max_dim }
     \dim_set:Nn \l_@@_left_corner_dim   { \c_max_dim }
-    \prop_map_inline:cn { l_@@_corners_ \@@_to_value:N #1 _prop }
+    \prop_map_inline:cn { coffin ~ \@@_to_value:N #1 ~ corners }
       { \@@_find_corner_maxima_aux:nn ##2 }
   }
 \cs_new_protected:Npn \@@_find_corner_maxima_aux:nn #1#2
@@ -1905,7 +1905,7 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_shift_corner:Nnnn #1#2#3#4
   {
-    \prop_put:cnx { l_@@_corners_ \@@_to_value:N #1 _ prop } {#2}
+    \prop_put:cnx { coffin ~ \@@_to_value:N #1 ~ corners } {#2}
       {
         { \dim_eval:n { #3 - \l_@@_left_corner_dim } }
         { \dim_eval:n { #4 - \l_@@_bottom_corner_dim } }
@@ -1913,7 +1913,7 @@
   }
 \cs_new_protected:Npn \@@_shift_pole:Nnnnnn #1#2#3#4#5#6
   {
-    \prop_put:cnx { l_@@_poles_ \@@_to_value:N #1 _ prop } {#2}
+    \prop_put:cnx { coffin ~ \@@_to_value:N #1 ~ poles } {#2}
       {
         { \dim_eval:n { #3 - \l_@@_left_corner_dim } }
         { \dim_eval:n { #4 - \l_@@_bottom_corner_dim } }
@@ -1975,9 +1975,9 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_resize_common:Nnn #1#2#3
   {
-    \prop_map_inline:cn { l_@@_corners_ \@@_to_value:N #1 _prop }
+    \prop_map_inline:cn { coffin ~ \@@_to_value:N #1 ~ corners }
       { \@@_scale_corner:Nnnn #1 {##1} ##2 }
-    \prop_map_inline:cn { l_@@_poles_ \@@_to_value:N #1 _prop }
+    \prop_map_inline:cn { coffin ~ \@@_to_value:N #1 ~ poles }
       { \@@_scale_pole:Nnnnnn #1 {##1} ##2 }
 %    \end{macrocode}
 %   Negative $x$-scaling values place the poles in the wrong
@@ -1986,10 +1986,10 @@
     \fp_compare:nNnT \l_@@_scale_x_fp < \c_zero_fp
       {
         \prop_map_inline:cn
-          { l_@@_corners_ \@@_to_value:N #1 _prop }
+          { coffin ~ \@@_to_value:N #1 ~ corners }
           { \@@_x_shift_corner:Nnnn #1 {##1} ##2 }
         \prop_map_inline:cn
-          { l_@@_poles_ \@@_to_value:N #1 _prop }
+          { coffin ~ \@@_to_value:N #1 ~ poles }
           { \@@_x_shift_pole:Nnnnnn #1 {##1} ##2 }
       }
   }
@@ -2044,7 +2044,7 @@
 \cs_new_protected:Npn \@@_scale_corner:Nnnn #1#2#3#4
   {
     \@@_scale_vector:nnNN {#3} {#4} \l_@@_x_dim \l_@@_y_dim
-    \prop_put:cnx { l_@@_corners_ \@@_to_value:N #1 _prop } {#2}
+    \prop_put:cnx { coffin ~ \@@_to_value:N #1 ~ corners } {#2}
       { { \dim_use:N \l_@@_x_dim } { \dim_use:N \l_@@_y_dim } }
   }
 \cs_new_protected:Npn \@@_scale_pole:Nnnnnn #1#2#3#4#5#6
@@ -2067,14 +2067,14 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_x_shift_corner:Nnnn #1#2#3#4
   {
-    \prop_put:cnx { l_@@_corners_ \@@_to_value:N #1 _prop } {#2}
+    \prop_put:cnx { coffin ~ \@@_to_value:N #1 ~ corners } {#2}
       {
         { \dim_eval:n { #3 + \box_wd:N #1 } } {#4}
       }
   }
 \cs_new_protected:Npn \@@_x_shift_pole:Nnnnnn #1#2#3#4#5#6
   {
-    \prop_put:cnx { l_@@_poles_ \@@_to_value:N #1 _prop } {#2}
+    \prop_put:cnx { coffin ~ \@@_to_value:N #1 ~ poles } {#2}
       {
         { \dim_eval:n { #3 + \box_wd:N #1 } } {#4}
         {#5} {#6}
