--- a/l3kernel/l3coffins.dtx
+++ b/l3kernel/l3coffins.dtx
@@ -470,7 +470,7 @@
   {
     \cs_if_exist:NTF #1
       {
-        \cs_if_exist:cTF { l_@@_poles_ \@@_to_value:N #1 _prop }
+        \cs_if_exist:cTF { coffin ~ \@@_to_value:N #1 ~ poles }
           { \prg_return_true: }
           { \prg_return_false: }
       }
@@ -528,11 +528,11 @@
   {
     \box_new:N #1
     \debug_suspend:
-    \prop_clear_new:c { l_@@_corners_ \@@_to_value:N #1 _prop }
-    \prop_clear_new:c { l_@@_poles_   \@@_to_value:N #1 _prop }
-    \prop_gset_eq:cN { l_@@_corners_ \@@_to_value:N #1 _prop }
+    \prop_clear_new:c { coffin ~ \@@_to_value:N #1 ~ corners }
+    \prop_clear_new:c { coffin ~ \@@_to_value:N #1 ~ poles }
+    \prop_gset_eq:cN { coffin ~ \@@_to_value:N #1 ~ corners }
       \c_@@_corners_prop
-    \prop_gset_eq:cN { l_@@_poles_ \@@_to_value:N #1 _prop }
+    \prop_gset_eq:cN { coffin ~ \@@_to_value:N #1 ~ poles }
       \c_@@_poles_prop
     \debug_resume:
   }
@@ -743,7 +743,7 @@
 \cs_new_protected:Npn \@@_get_pole:NnN #1#2#3
   {
     \prop_get:cnNF
-      { l_@@_poles_ \@@_to_value:N #1 _prop } {#2} #3
+      { coffin ~ \@@_to_value:N #1 ~ poles } {#2} #3
       {
         \__kernel_msg_error:nnxx { kernel } { unknown-coffin-pole }
           { \exp_not:n {#2} } { \token_to_str:N #1 }
@@ -758,9 +758,9 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_reset_structure:N #1
   {
-    \prop_set_eq:cN { l_@@_corners_ \@@_to_value:N #1 _prop }
+    \prop_set_eq:cN { coffin ~ \@@_to_value:N #1 ~ corners }
       \c_@@_corners_prop
-    \prop_set_eq:cN { l_@@_poles_ \@@_to_value:N #1 _prop }
+    \prop_set_eq:cN { coffin ~ \@@_to_value:N #1 ~ poles }
       \c_@@_poles_prop
   }
 %    \end{macrocode}
@@ -772,17 +772,17 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_set_eq_structure:NN #1#2
   {
-    \prop_set_eq:cc { l_@@_corners_ \@@_to_value:N #1 _prop }
-      { l_@@_corners_ \@@_to_value:N #2 _prop }
-    \prop_set_eq:cc { l_@@_poles_ \@@_to_value:N #1 _prop }
-      { l_@@_poles_ \@@_to_value:N #2 _prop }
+    \prop_set_eq:cc { coffin ~ \@@_to_value:N #1 ~ corners }
+      { coffin ~ \@@_to_value:N #2 ~ corners }
+    \prop_set_eq:cc { coffin ~ \@@_to_value:N #1 ~ poles }
+      { coffin ~ \@@_to_value:N #2 ~ poles }
   }
 \cs_new_protected:Npn \@@_gset_eq_structure:NN #1#2
   {
-    \prop_gset_eq:cc { l_@@_corners_ \@@_to_value:N #1 _prop }
-      { l_@@_corners_ \@@_to_value:N #2 _prop }
-    \prop_gset_eq:cc { l_@@_poles_ \@@_to_value:N #1 _prop }
-      { l_@@_poles_ \@@_to_value:N #2 _prop }
+    \prop_gset_eq:cc { coffin ~ \@@_to_value:N #1 ~ corners }
+      { coffin ~ \@@_to_value:N #2 ~ corners }
+    \prop_gset_eq:cc { coffin ~ \@@_to_value:N #1 ~ poles }
+      { coffin ~ \@@_to_value:N #2 ~ poles }
   }
 %    \end{macrocode}
 % \end{macro}
@@ -820,7 +820,7 @@
   }
 \cs_new_protected:Npn \@@_set_pole:Nnn #1#2#3
   {
-    \prop_put:cnn { l_@@_poles_ \@@_to_value:N #1 _prop }
+    \prop_put:cnn { coffin ~ \@@_to_value:N #1 ~ poles }
       {#2} {#3}
   }
 \cs_generate_variant:Nn \coffin_set_horizontal_pole:Nnn { c }
@@ -838,19 +838,19 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_update_corners:N #1
   {
-    \prop_put:cnx { l_@@_corners_ \@@_to_value:N #1 _prop }
+    \prop_put:cnx { coffin ~ \@@_to_value:N #1 ~ corners }
       { tl }
       { { 0pt } { \dim_eval:n { \box_ht:N #1 } } }
-    \prop_put:cnx { l_@@_corners_ \@@_to_value:N #1 _prop }
+    \prop_put:cnx { coffin ~ \@@_to_value:N #1 ~ corners }
       { tr }
       {
         { \dim_eval:n { \box_wd:N #1 } }
         { \dim_eval:n { \box_ht:N #1 } }
       }
-    \prop_put:cnx { l_@@_corners_ \@@_to_value:N #1 _prop }
+    \prop_put:cnx { coffin ~ \@@_to_value:N #1 ~ corners }
       { bl }
       { { 0pt } { \dim_eval:n { -\box_dp:N #1 } } }
-    \prop_put:cnx { l_@@_corners_ \@@_to_value:N #1 _prop }
+    \prop_put:cnx { coffin ~ \@@_to_value:N #1 ~ corners }
       { br }
       {
         { \dim_eval:n { \box_wd:N #1 } }
@@ -869,31 +869,31 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_update_poles:N #1
   {
-    \prop_put:cnx { l_@@_poles_ \@@_to_value:N #1 _prop } { hc }
+    \prop_put:cnx { coffin ~ \@@_to_value:N #1 ~ poles } { hc }
       {
         { \dim_eval:n { 0.5 \box_wd:N #1 } }
         { 0pt } { 0pt } { 1000pt }
       }
-    \prop_put:cnx { l_@@_poles_ \@@_to_value:N #1 _prop } { r }
+    \prop_put:cnx { coffin ~ \@@_to_value:N #1 ~ poles } { r }
       {
         { \dim_eval:n { \box_wd:N #1 } }
         { 0pt } { 0pt } { 1000pt }
       }
-    \prop_put:cnx { l_@@_poles_ \@@_to_value:N #1 _prop } { vc }
+    \prop_put:cnx { coffin ~ \@@_to_value:N #1 ~ poles } { vc }
       {
         { 0pt }
         { \dim_eval:n { ( \box_ht:N #1 - \box_dp:N #1 ) / 2 } }
         { 1000pt }
         { 0pt }
       }
-    \prop_put:cnx { l_@@_poles_ \@@_to_value:N #1 _prop } { t }
+    \prop_put:cnx { coffin ~ \@@_to_value:N #1 ~ poles } { t }
       {
         { 0pt }
         { \dim_eval:n { \box_ht:N #1 } }
         { 1000pt }
         { 0pt }
       }
-    \prop_put:cnx { l_@@_poles_ \@@_to_value:N #1 _prop } { b }
+    \prop_put:cnx { coffin ~ \@@_to_value:N #1 ~ poles } { b }
       {
         { 0pt }
         { \dim_eval:n { -\box_dp:N #1 } }
@@ -1145,9 +1145,8 @@
    \@@_reset_structure:N \l_@@_aligned_coffin
    \prop_clear:c
      {
-       l_@@_corners_
-       \@@_to_value:N \l_@@_aligned_coffin
-       _prop
+       coffin ~ \@@_to_value:N \l_@@_aligned_coffin
+       \c_space_tl corners
      }
    \@@_update_poles:N \l_@@_aligned_coffin
 %    \end{macrocode}
@@ -1199,10 +1198,10 @@
     \@@_reset_structure:N \l_@@_aligned_coffin
     \prop_set_eq:cc
       {
-        l_@@_corners_
-        \@@_to_value:N \l_@@_aligned_coffin _prop
+        coffin ~ \@@_to_value:N \l_@@_aligned_coffin 
+        \c_space_tl corners
       }
-      { l_@@_corners_ \@@_to_value:N #1 _prop }
+      { coffin ~ \@@_to_value:N #1 ~ corners }
     \@@_update_poles:N  \l_@@_aligned_coffin
     \@@_offset_poles:Nnn #1 { 0pt } { 0pt }
     \@@_offset_poles:Nnn #4
@@ -1271,7 +1270,7 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_offset_poles:Nnn #1#2#3
   {
-    \prop_map_inline:cn { l_@@_poles_ \@@_to_value:N #1 _prop }
+    \prop_map_inline:cn { coffin ~ \@@_to_value:N #1 ~ poles }
       { \@@_offset_pole:Nnnnnnn #1 {##1} ##2 {#2} {#3} }
   }
 \cs_new_protected:Npn \@@_offset_pole:Nnnnnnn #1#2#3#4#5#6#7#8
@@ -1300,15 +1299,15 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_offset_corners:Nnn #1#2#3
   {
-    \prop_map_inline:cn { l_@@_corners_ \@@_to_value:N #1 _prop }
+    \prop_map_inline:cn { coffin ~ \@@_to_value:N #1 ~ corners }
       { \@@_offset_corner:Nnnnn #1 {##1} ##2 {#2} {#3} }
   }
 \cs_new_protected:Npn \@@_offset_corner:Nnnnn #1#2#3#4#5#6
   {
     \prop_put:cnx
       {
-        l_@@_corners_
-        \@@_to_value:N \l_@@_aligned_coffin _prop
+        coffin ~ \@@_to_value:N \l_@@_aligned_coffin
+        \c_space_tl corners
       }
       { #1 - #2 }
       {
@@ -1585,7 +1584,7 @@
 %</package>
       }
     \prop_set_eq:Nc \l_@@_display_poles_prop
-      { l_@@_poles_ \@@_to_value:N #1 _prop }
+      { coffin ~ \@@_to_value:N #1 ~ poles }
     \@@_get_pole:NnN #1 { H } \l_@@_pole_a_tl
     \@@_get_pole:NnN #1 { T } \l_@@_pole_b_tl
     \tl_if_eq:NNT \l_@@_pole_a_tl \l_@@_pole_b_tl
@@ -1729,7 +1728,7 @@
           }
           {
             \prop_map_function:cN
-              { l_@@_poles_ \@@_to_value:N #2 _prop }
+              { coffin ~ \@@_to_value:N #2 ~ poles }
               \msg_show_item_unbraced:nn
           }
           { }
