Ready internal 'reset' functions for global use

--- a/l3kernel/l3coffins.dtx
+++ b/l3kernel/l3coffins.dtx
@@ -549,9 +549,7 @@
             \color_ensure_current:
             #2
           }
-        \@@_reset_structure:N #1
-        \@@_update_poles:N #1
-        \@@_update_corners:N #1
+        \@@_update:N #1
       }
   }
 \cs_generate_variant:Nn \hcoffin_set:Nn { c }
@@ -580,9 +578,7 @@
 %</package>
             #3
           }
-        \@@_reset_structure:N #1
-        \@@_update_poles:N #1
-        \@@_update_corners:N #1
+        \@@_update:N #1
         \vbox_set_top:Nn \l_@@_internal_box { \vbox_unpack:N #1 }
         \@@_set_pole:Nnx #1 { T }
           {
@@ -614,9 +610,7 @@
           \cs_set_protected:Npn \hcoffin_set_end:
             {
               \hbox_set_end:
-              \@@_reset_structure:N #1
-              \@@_update_poles:N #1
-              \@@_update_corners:N #1
+              \@@_update:N #1
             }
       }
   }
@@ -643,9 +637,7 @@
           \cs_set_protected:Npn \vcoffin_set_end:
             {
               \vbox_set_end:
-              \@@_reset_structure:N #1
-              \@@_update_poles:N #1
-              \@@_update_corners:N #1
+              \@@_update:N #1
               \vbox_set_top:Nn \l_@@_internal_box { \vbox_unpack:N #1 }
               \@@_set_pole:Nnx #1 { T }
                 {
@@ -749,7 +741,7 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}{\@@_reset_structure:N}
+% \begin{macro}{\@@_reset_structure:N, \@@_greset_structure:N}
 %   Resetting the structure is a simple copy job.
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_reset_structure:N #1
@@ -757,6 +749,13 @@
     \prop_set_eq:cN { coffin ~ \@@_to_value:N #1 ~ corners }
       \c_@@_corners_prop
     \prop_set_eq:cN { coffin ~ \@@_to_value:N #1 ~ poles }
+      \c_@@_poles_prop
+  }
+\cs_new_protected:Npn \@@_greset_structure:N #1
+  {
+    \prop_gset_eq:cN { coffin ~ \@@_to_value:N #1 ~ corners }
+      \c_@@_corners_prop
+    \prop_gset_eq:cN { coffin ~ \@@_to_value:N #1 ~ poles }
       \c_@@_poles_prop
   }
 %    \end{macrocode}
@@ -827,26 +826,49 @@
 % \end{macro}
 % \end{macro}
 %
-% \begin{macro}{\@@_update_corners:N}
+% \begin{macro}{\@@_update:N, \@@_gupdate:N}
+%   Simple shortcuts.
+%    \begin{macrocode}
+\cs_new_protected:Npn \@@_update:N #1
+  {
+    \@@_reset_structure:N #1
+    \@@_update_corners:N #1
+    \@@_update_poles:N #1
+  }
+\cs_new_protected:Npn \@@_gupdate:N #1
+  {
+    \@@_greset_structure:N #1
+    \@@_gupdate_corners:N #1
+    \@@_gupdate_poles:N #1
+  }
+%    \end{macrocode}
+% \end{macro}
+%
+% \begin{macro}{\@@_update_corners:N, \@@_gupdate_corners:N}
+% \begin{macro}{\@@_update_corners:NN}
 %   Updating the corners of a coffin is straight-forward as at this stage
 %   there can be no rotation. So the corners of the content are just those
 %   of the underlying \TeX{} box.
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_update_corners:N #1
+  { \@@_update_corners:NN #1 \prop_put:cnx }
+\cs_new_protected:Npn \@@_gupdate_corners:N #1
+  { \@@_update_corners:NN #1 \prop_gput:cnx }
+\cs_new_protected:Npn \@@_update_corners:NN #1#2
   {
-    \prop_put:cnx { coffin ~ \@@_to_value:N #1 ~ corners }
+    #2 { coffin ~ \@@_to_value:N #1 ~ corners }
       { tl }
       { { 0pt } { \dim_eval:n { \box_ht:N #1 } } }
-    \prop_put:cnx { coffin ~ \@@_to_value:N #1 ~ corners }
+    #2 { coffin ~ \@@_to_value:N #1 ~ corners }
       { tr }
       {
         { \dim_eval:n { \box_wd:N #1 } }
         { \dim_eval:n { \box_ht:N #1 } }
       }
-    \prop_put:cnx { coffin ~ \@@_to_value:N #1 ~ corners }
+    #2 { coffin ~ \@@_to_value:N #1 ~ corners }
       { bl }
       { { 0pt } { \dim_eval:n { -\box_dp:N #1 } } }
-    \prop_put:cnx { coffin ~ \@@_to_value:N #1 ~ corners }
+    #2 { coffin ~ \@@_to_value:N #1 ~ corners }
       { br }
       {
         { \dim_eval:n { \box_wd:N #1 } }
@@ -855,8 +877,10 @@
   }
 %    \end{macrocode}
 % \end{macro}
+% \end{macro}
 %
-% \begin{macro}{\@@_update_poles:N}
+% \begin{macro}{\@@_update_poles:N, \@@_gupdate_poles:N}
+% \begin{macro}{\@@_update_poles:NN}
 %   This function is called when a coffin is set, and updates the poles to
 %   reflect the nature of size of the box. Thus this function only alters
 %   poles where the default position is dependent on the size of the box.
@@ -864,32 +888,36 @@
 %   coffins.
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_update_poles:N #1
+  { \@@_update_poles:NN #1 \prop_put:cnx }
+\cs_new_protected:Npn \@@_gupdate_poles:N #1
+  { \@@_update_poles:NN #1 \prop_gput:cnx }
+\cs_new_protected:Npn \@@_update_poles:NN #1#2
   {
-    \prop_put:cnx { coffin ~ \@@_to_value:N #1 ~ poles } { hc }
+    #2 { coffin ~ \@@_to_value:N #1 ~ poles } { hc }
       {
         { \dim_eval:n { 0.5 \box_wd:N #1 } }
         { 0pt } { 0pt } { 1000pt }
       }
-    \prop_put:cnx { coffin ~ \@@_to_value:N #1 ~ poles } { r }
+    #2 { coffin ~ \@@_to_value:N #1 ~ poles } { r }
       {
         { \dim_eval:n { \box_wd:N #1 } }
         { 0pt } { 0pt } { 1000pt }
       }
-    \prop_put:cnx { coffin ~ \@@_to_value:N #1 ~ poles } { vc }
+    #2 { coffin ~ \@@_to_value:N #1 ~ poles } { vc }
       {
         { 0pt }
         { \dim_eval:n { ( \box_ht:N #1 - \box_dp:N #1 ) / 2 } }
         { 1000pt }
         { 0pt }
       }
-    \prop_put:cnx { coffin ~ \@@_to_value:N #1 ~ poles } { t }
+    #2 { coffin ~ \@@_to_value:N #1 ~ poles } { t }
       {
         { 0pt }
         { \dim_eval:n { \box_ht:N #1 } }
         { 1000pt }
         { 0pt }
       }
-    \prop_put:cnx { coffin ~ \@@_to_value:N #1 ~ poles } { b }
+    #2 { coffin ~ \@@_to_value:N #1 ~ poles } { b }
       {
         { 0pt }
         { \dim_eval:n { -\box_dp:N #1 } }
