Update a label\ref [ci skip]

--- a/l3kernel/l3box.dtx
+++ b/l3kernel/l3box.dtx
@@ -1670,7 +1670,7 @@
 %   The next step is to work out the $x$ and $y$ coordinates of vertices of
 %   the rotated box in relation to its original coordinates. The box can be
 %   visualized with vertices $B$, $C$, $D$ and $E$ is illustrated
-%   (Figure~\ref{fig:l3candidates:rotation}). The vertex $O$ is the reference point
+%   (Figure~\ref{fig:l3box:rotation}). The vertex $O$ is the reference point
 %   on the baseline, and in this implementation is also the centre of rotation.
 %   \begin{figure}
 %     \centering
@@ -1688,7 +1688,7 @@
 %       \put(21,59){O}
 %     \end{picture}
 %     \caption{Co-ordinates of a box prior to rotation.}
-%     \label{fig:l3candidates:rotation}
+%     \label{fig:l3box:rotation}
 %   \end{figure}
 %   The formulae are, for a point $P$ and angle $\alpha$:
 %   \[
