--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -197,7 +197,11 @@
 %
 % \section{Additions to \pkg{l3coffins}}
 %
-% \begin{function}{\coffin_resize:Nnn, \coffin_resize:cnn}
+% \begin{function}[updated = 2019-01-23]
+%   {
+%     \coffin_resize:Nnn, \coffin_resize:cnn,
+%     \coffin_gresize:Nnn, \coffin_gresize:cnn
+%   }
 %   \begin{syntax}
 %     \cs{coffin_resize:Nnn} \meta{coffin} \Arg{width} \Arg{total-height}
 %   \end{syntax}
@@ -205,7 +209,11 @@
 %   both of which should be given as dimension expressions.
 % \end{function}
 %
-% \begin{function}{\coffin_rotate:Nn, \coffin_rotate:cn}
+% \begin{function}[updated = 2019-01-23]
+%   {
+%     \coffin_rotate:Nn, \coffin_rotate:cn,
+%     \coffin_grotate:Nn, \coffin_grotate:cn
+%   }
 %   \begin{syntax}
 %     \cs{coffin_rotate:Nn} \meta{coffin} \Arg{angle}
 %   \end{syntax}
@@ -215,7 +223,11 @@
 %   the bounding box of the coffin growing unnecessarily.
 % \end{function}
 %
-% \begin{function}{\coffin_scale:Nnn, \coffin_scale:cnn}
+% \begin{function}\coffin_rotate:Nn, \coffin_rotate:cn
+%   {
+%     \coffin_scale:Nnn, \coffin_scale:cnn,
+%     \coffin_gscale:Nnn, \coffin_gscale:cnn
+%   }
 %   \begin{syntax}
 %     \cs{coffin_scale:Nnn} \meta{coffin} \Arg{x-scale} \Arg{y-scale}
 %   \end{syntax}
@@ -1642,6 +1654,14 @@
 %    \end{macrocode}
 % \end{variable}
 %
+% \begin{variable}{\l_@@_corners_prop, \l_@@_poles_prop}
+%   Used to avoid needing to track scope for intermediate steps.
+%    \begin{macrocode}
+\prop_new:N \l_@@_corners_prop
+\prop_new:N \l_@@_poles_prop
+%    \end{macrocode}
+% \end{variable}
+%
 % \begin{variable}{\l_@@_bounding_shift_dim}
 %   The shift of the bounding box of a coffin from the real content.
 %    \begin{macrocode}
@@ -1666,7 +1686,12 @@
 % \end{variable}
 % \end{variable}
 %
-% \begin{macro}{\coffin_rotate:Nn, \coffin_rotate:cn}
+% \begin{macro}
+%   {
+%     \coffin_rotate:Nn, \coffin_rotate:cn,
+%     \coffin_grotate:Nn, \coffin_grotate:cn
+%   }
+% \begin{macro}{\@@_rotate:NnNN}
 %   Rotating a coffin requires several steps which can be conveniently
 %   run together. The sine and cosine of the angle in degrees are
 %   computed.  This is then used to set \cs{l_@@_sin_fp} and
@@ -1674,16 +1699,28 @@
 %   of the procedure.
 %    \begin{macrocode}
 \cs_new_protected:Npn \coffin_rotate:Nn #1#2
+  { \@@_rotate:NnNN #1 {#2} \box_rotate:Nn \prop_set_eq:cN }
+\cs_new_protected:Npn \coffin_grotate:Nn #1#2
+  { \@@_rotate:NnNN #1 {#2} \box_grotate:Nn \prop_gset_eq:cN }
+\cs_new_protected:Npn \@@_rotate:NnNN #1#2#3#4
   {
     \fp_set:Nn \l_@@_sin_fp { sind ( #2 ) }
     \fp_set:Nn \l_@@_cos_fp { cosd ( #2 ) }
 %    \end{macrocode}
+%   Use a local copy of the property lists to avoid needing to pass the
+%   name and scope around.
+%    \begin{macrocode}
+    \prop_set_eq:Nc \l_@@_corners_prop
+      { coffin ~ \@@_to_value:N #1 ~ corners }
+    \prop_set_eq:Nc \l_@@_poles_prop
+      { coffin ~ \@@_to_value:N #1 ~ poles }
+%    \end{macrocode}
 %   The corners and poles of the coffin can now be rotated around the
 %    origin. This is best achieved using mapping functions.
 %    \begin{macrocode}
-    \prop_map_inline:cn { coffin ~ \@@_to_value:N #1 ~ corners }
+    \prop_map_inline:Nn \l_@@_corners_prop
       { \@@_rotate_corner:Nnnn #1 {##1} ##2 }
-    \prop_map_inline:cn { coffin ~ \@@_to_value:N #1 ~ poles }
+    \prop_map_inline:Nn \l_@@_poles_prop
       { \@@_rotate_pole:Nnnnnn #1 {##1} ##2 }
 %    \end{macrocode}
 %   The bounding box of the coffin needs to be rotated, and to do this
@@ -1699,7 +1736,7 @@
 %    \begin{macrocode}
     \@@_find_corner_maxima:N #1
     \@@_find_bounding_shift:
-    \box_rotate:Nn #1 {#2}
+    #3 #1 {#2}
 %    \end{macrocode}
 %   The correction of the box position itself takes place here. The idea
 %   is that the bounding box for a coffin is tight up to the content, and
@@ -1736,13 +1773,21 @@
 %   The final task is to move the poles and corners such that they are
 %   back in alignment with the box reference point.
 %    \begin{macrocode}
-    \prop_map_inline:cn { coffin ~ \@@_to_value:N #1 ~ corners }
+    \prop_map_inline:Nn \l_@@_corners_prop
       { \@@_shift_corner:Nnnn #1 {##1} ##2 }
-    \prop_map_inline:cn { coffin ~ \@@_to_value:N #1 ~ poles }
+    \prop_map_inline:Nn \l_@@_poles_prop
       { \@@_shift_pole:Nnnnnn #1 {##1} ##2 }
+%    \end{macrocode}
+%   Update the coffin data.
+%    \begin{macrocode}
+    #4 { coffin ~ \@@_to_value:N #1 ~ corners }
+      \l_@@_corners_prop
+    #4 { coffin ~ \@@_to_value:N #1 ~ poles }
+      \l_@@_poles_prop
   }
 \cs_generate_variant:Nn \coffin_rotate:Nn { c }
 %    \end{macrocode}
+% \end{macro}
 % \end{macro}
 %
 % \begin{macro}{\@@_set_bounding:N}
@@ -1787,7 +1832,7 @@
 \cs_new_protected:Npn \@@_rotate_corner:Nnnn #1#2#3#4
   {
     \@@_rotate_vector:nnNN {#3} {#4} \l_@@_x_dim \l_@@_y_dim
-    \prop_put:cnx { coffin ~ \@@_to_value:N #1 ~ corners } {#2}
+    \prop_put:Nnx \l_@@_corners_prop {#2}
       { { \dim_use:N \l_@@_x_dim } { \dim_use:N \l_@@_y_dim } }
   }
 %    \end{macrocode}
@@ -1804,7 +1849,7 @@
     \@@_rotate_vector:nnNN {#3} {#4} \l_@@_x_dim \l_@@_y_dim
     \@@_rotate_vector:nnNN {#5} {#6}
       \l_@@_x_prime_dim \l_@@_y_prime_dim
-    \@@_set_pole:Nnx #1 {#2}
+    \prop_put:Nnx \l_@@_poles_prop {#2}
       {
         { \dim_use:N \l_@@_x_dim } { \dim_use:N \l_@@_y_dim }
         { \dim_use:N \l_@@_x_prime_dim }
@@ -1858,7 +1903,7 @@
     \dim_set:Nn \l_@@_right_corner_dim { -\c_max_dim }
     \dim_set:Nn \l_@@_bottom_corner_dim { \c_max_dim }
     \dim_set:Nn \l_@@_left_corner_dim   { \c_max_dim }
-    \prop_map_inline:cn { coffin ~ \@@_to_value:N #1 ~ corners }
+    \prop_map_inline:Nn \l_@@_corners_prop
       { \@@_find_corner_maxima_aux:nn ##2 }
   }
 \cs_new_protected:Npn \@@_find_corner_maxima_aux:nn #1#2
@@ -1905,7 +1950,7 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_shift_corner:Nnnn #1#2#3#4
   {
-    \prop_put:cnx { coffin ~ \@@_to_value:N #1 ~ corners } {#2}
+    \prop_put:Nnx \l_@@_corners_prop {#2}
       {
         { \dim_eval:n { #3 - \l_@@_left_corner_dim } }
         { \dim_eval:n { #4 - \l_@@_bottom_corner_dim } }
@@ -1913,7 +1958,7 @@
   }
 \cs_new_protected:Npn \@@_shift_pole:Nnnnnn #1#2#3#4#5#6
   {
-    \prop_put:cnx { coffin ~ \@@_to_value:N #1 ~ poles } {#2}
+    \prop_put:Nnx \l_@@_poles_prop {#2}
       {
         { \dim_eval:n { #3 - \l_@@_left_corner_dim } }
         { \dim_eval:n { #4 - \l_@@_bottom_corner_dim } }
@@ -1946,7 +1991,12 @@
 % \end{variable}
 % \end{variable}
 %
-% \begin{macro}{\coffin_resize:Nnn, \coffin_resize:cnn}
+% \begin{macro}
+%   {
+%     \coffin_resize:Nnn, \coffin_resize:cnn,
+%     \coffin_gresize:Nnn, \coffin_gresize:cnn
+%   }
+% \begin{macro}{\@@_resize:NnnNN}
 %   Resizing a coffin begins by setting up the user-friendly names for
 %   the dimensions of the coffin box. The new sizes are then turned into
 %   scale factor. This is the same operation as takes place for the
@@ -1955,6 +2005,20 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \coffin_resize:Nnn #1#2#3
   {
+    \@@_resize:NnnNN #1 {#2} {#3}
+      \box_resize_to_wd_and_ht_plus_dp:Nnn
+      \prop_set_eq:cN
+  }
+\cs_generate_variant:Nn \coffin_resize:Nnn { c }
+\cs_new_protected:Npn \coffin_gresize:Nnn #1#2#3
+  {
+    \@@_resize:NnnNN #1 {#2} {#3}
+      \box_gresize_to_wd_and_ht_plus_dp:Nnn
+      \prop_gset_eq:cN
+  }
+\cs_generate_variant:Nn \coffin_gresize:Nnn { c }
+\cs_new_protected:Npn \@@_resize:NnnNN #1#2#3#4#5
+  {  
     \fp_set:Nn \l_@@_scale_x_fp
       { \dim_to_fp:n {#2} / \dim_to_fp:n { \coffin_wd:N #1 } }
     \fp_set:Nn \l_@@_scale_y_fp
@@ -1962,22 +2026,26 @@
           \dim_to_fp:n {#3}
         / \dim_to_fp:n { \coffin_ht:N #1 + \coffin_dp:N #1 }
       }
-    \box_resize_to_wd_and_ht_plus_dp:Nnn #1 {#2} {#3}
-    \@@_resize_common:Nnn #1 {#2} {#3}
+    #4 #1 {#2} {#3}
+    \@@_resize_common:NnnN #1 {#2} {#3} #5
   }
-\cs_generate_variant:Nn \coffin_resize:Nnn { c }
 %    \end{macrocode}
 % \end{macro}
+% \end{macro}
 %
-% \begin{macro}{\@@_resize_common:Nnn}
+% \begin{macro}{\@@_resize_common:NnnN}
 %   The poles and corners of the coffin are scaled to the appropriate
 %   places before actually resizing the underlying box.
 %    \begin{macrocode}
-\cs_new_protected:Npn \@@_resize_common:Nnn #1#2#3
+\cs_new_protected:Npn \@@_resize_common:NnnN #1#2#3#4
   {
-    \prop_map_inline:cn { coffin ~ \@@_to_value:N #1 ~ corners }
+    \prop_set_eq:Nc \l_@@_corners_prop
+      { coffin ~ \@@_to_value:N #1 ~ corners }
+    \prop_set_eq:Nc \l_@@_poles_prop
+      { coffin ~ \@@_to_value:N #1 ~ poles }
+    \prop_map_inline:Nn \l_@@_corners_prop
       { \@@_scale_corner:Nnnn #1 {##1} ##2 }
-    \prop_map_inline:cn { coffin ~ \@@_to_value:N #1 ~ poles }
+    \prop_map_inline:Nn \l_@@_poles_prop
       { \@@_scale_pole:Nnnnnn #1 {##1} ##2 }
 %    \end{macrocode}
 %   Negative $x$-scaling values place the poles in the wrong
@@ -1985,18 +2053,25 @@
 %    \begin{macrocode}
     \fp_compare:nNnT \l_@@_scale_x_fp < \c_zero_fp
       {
-        \prop_map_inline:cn
-          { coffin ~ \@@_to_value:N #1 ~ corners }
+        \prop_map_inline:Nn \l_@@_corners_prop
           { \@@_x_shift_corner:Nnnn #1 {##1} ##2 }
-        \prop_map_inline:cn
-          { coffin ~ \@@_to_value:N #1 ~ poles }
+        \prop_map_inline:Nn \l_@@_poles_prop
           { \@@_x_shift_pole:Nnnnnn #1 {##1} ##2 }
       }
+    #4 { coffin ~ \@@_to_value:N #1 ~ corners }
+      \l_@@_corners_prop
+    #4 { coffin ~ \@@_to_value:N #1 ~ poles }
+      \l_@@_poles_prop  
   }
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}{\coffin_scale:Nnn, \coffin_scale:cnn}
+% \begin{macro}
+%   {
+%     \coffin_scale:Nnn, \coffin_scale:cnn,
+%     \coffin_gscale:Nnn, \coffin_gscale:cnn
+%   }
+% \begin{macro}{\coffin_scale:NnnNN}
 %   For scaling, the opposite calculation is done to find the new
 %   dimensions for the coffin. Only the total height is needed, as this
 %   is the shift required for corners and poles. The scaling is done
@@ -2004,21 +2079,28 @@
 %   without needing to use the \texttt{fp} module.
 %    \begin{macrocode}
 \cs_new_protected:Npn \coffin_scale:Nnn #1#2#3
+  { \@@_scale:NnnNN #1 {#2} {#3} \box_scale:Nnn \prop_set_eq:cN }
+\cs_generate_variant:Nn \coffin_scale:Nnn { c }
+\cs_new_protected:Npn \coffin_gscale:Nnn #1#2#3
+  { \@@_scale:NnnNN #1 {#2} {#3} \box_gscale:Nnn \prop_gset_eq:cN }
+\cs_generate_variant:Nn \coffin_gscale:Nnn { c }
+\cs_new_protected:Npn \@@_scale:NnnNN #1#2#3#4#5
   {
     \fp_set:Nn \l_@@_scale_x_fp {#2}
     \fp_set:Nn \l_@@_scale_y_fp {#3}
-    \box_scale:Nnn #1 { \l_@@_scale_x_fp } { \l_@@_scale_y_fp }
+    #4 #1 { \l_@@_scale_x_fp } { \l_@@_scale_y_fp }
     \dim_set:Nn \l_@@_internal_dim
       { \coffin_ht:N #1 + \coffin_dp:N #1 }
     \dim_set:Nn \l_@@_scaled_total_height_dim
       { \fp_abs:n { \l_@@_scale_y_fp } \l_@@_internal_dim }
     \dim_set:Nn \l_@@_scaled_width_dim
       { -\fp_abs:n { \l_@@_scale_x_fp  } \coffin_wd:N #1 }
-    \@@_resize_common:Nnn #1
+    \@@_resize_common:NnnN #1
       { \l_@@_scaled_width_dim } { \l_@@_scaled_total_height_dim }
+      #5
   }
-\cs_generate_variant:Nn \coffin_scale:Nnn { c }
 %    \end{macrocode}
+% \end{macro}
 % \end{macro}
 %
 % \begin{macro}{\@@_scale_vector:nnNN}
@@ -2044,13 +2126,13 @@
 \cs_new_protected:Npn \@@_scale_corner:Nnnn #1#2#3#4
   {
     \@@_scale_vector:nnNN {#3} {#4} \l_@@_x_dim \l_@@_y_dim
-    \prop_put:cnx { coffin ~ \@@_to_value:N #1 ~ corners } {#2}
+    \prop_put:Nnx \l_@@_corners_prop {#2}
       { { \dim_use:N \l_@@_x_dim } { \dim_use:N \l_@@_y_dim } }
   }
 \cs_new_protected:Npn \@@_scale_pole:Nnnnnn #1#2#3#4#5#6
   {
     \@@_scale_vector:nnNN {#3} {#4} \l_@@_x_dim \l_@@_y_dim
-    \@@_set_pole:Nnx #1 {#2}
+    \prop_put:Nnx \l_@@_poles_prop {#2}
       {
         { \dim_use:N \l_@@_x_dim } { \dim_use:N \l_@@_y_dim }
         {#5} {#6}
@@ -2067,14 +2149,14 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_x_shift_corner:Nnnn #1#2#3#4
   {
-    \prop_put:cnx { coffin ~ \@@_to_value:N #1 ~ corners } {#2}
+    \prop_put:Nnx \l_@@_corners_prop {#2}
       {
         { \dim_eval:n { #3 + \box_wd:N #1 } } {#4}
       }
   }
 \cs_new_protected:Npn \@@_x_shift_pole:Nnnnnn #1#2#3#4#5#6
   {
-    \prop_put:cnx { coffin ~ \@@_to_value:N #1 ~ poles } {#2}
+    \prop_put:Nnx \l_@@_poles_prop {#2}
       {
         { \dim_eval:n { #3 + \box_wd:N #1 } } {#4}
         {#5} {#6}
