--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -1522,7 +1522,7 @@
         \hbox_set:Nn \l_@@_internal_box
           {
             \box_move_down:nn \c_zero_dim
-              { \box_use:N \l_@@_internal_box }
+              { \box_use_drop:N \l_@@_internal_box }
           }
         \box_set_dp:Nn \l_@@_internal_box { \box_dp:N #1 - (#3) }
       }
@@ -1530,7 +1530,7 @@
         \hbox_set:Nn \l_@@_internal_box
           {
             \box_move_down:nn { (#3) - \box_dp:N #1 }
-              { \box_use:N \l_@@_internal_box }
+              { \box_use_drop:N \l_@@_internal_box }
           }
         \box_set_dp:Nn \l_@@_internal_box \c_zero_dim
       }
@@ -1542,7 +1542,7 @@
         \hbox_set:Nn \l_@@_internal_box
           {
             \box_move_up:nn \c_zero_dim
-              { \box_use:N \l_@@_internal_box }
+              { \box_use_drop:N \l_@@_internal_box }
           }
         \box_set_ht:Nn \l_@@_internal_box
           { \box_ht:N \l_@@_internal_box - (#5) }
@@ -1551,7 +1551,7 @@
         \hbox_set:Nn \l_@@_internal_box
           {
             \box_move_up:nn { (#5) - \box_ht:N \l_@@_internal_box }
-              { \box_use:N \l_@@_internal_box }
+              { \box_use_drop:N \l_@@_internal_box }
           }
         \box_set_ht:Nn \l_@@_internal_box \c_zero_dim
       }
@@ -1579,13 +1579,13 @@
         \hbox_set:Nn \l_@@_internal_box
           {
             \box_move_down:nn \c_zero_dim
-              { \box_use:N \l_@@_internal_box }
+              { \box_use_drop:N \l_@@_internal_box }
           }
         \box_set_dp:Nn \l_@@_internal_box { - \@@_dim_eval:n {#3} }
       }
       {
         \hbox_set:Nn \l_@@_internal_box
-          { \box_move_down:nn {#3} { \box_use:N \l_@@_internal_box } }
+          { \box_move_down:nn {#3} { \box_use_drop:N \l_@@_internal_box } }
         \box_set_dp:Nn \l_@@_internal_box \c_zero_dim
       }
     \dim_compare:nNnTF {#5} > \c_zero_dim
@@ -1593,7 +1593,7 @@
         \hbox_set:Nn \l_@@_internal_box
           {
             \box_move_up:nn \c_zero_dim
-              { \box_use:N \l_@@_internal_box }
+              { \box_use_drop:N \l_@@_internal_box }
           }
         \box_set_ht:Nn \l_@@_internal_box
           {
@@ -1606,7 +1606,7 @@
         \hbox_set:Nn \l_@@_internal_box
           {
             \box_move_up:nn { - \@@_dim_eval:n {#5} }
-              { \box_use:N \l_@@_internal_box }
+              { \box_use_drop:N \l_@@_internal_box }
           }
         \box_set_ht:Nn \l_@@_internal_box \c_zero_dim
       }
@@ -1731,7 +1731,7 @@
     \box_set_dp:Nn \l_@@_internal_box { 0 pt }
     \box_set_wd:Nn \l_@@_internal_box
       { \l_@@_right_corner_dim - \l_@@_left_corner_dim }
-    \hbox_set:Nn #1 { \box_use:N \l_@@_internal_box }
+    \hbox_set:Nn #1 { \box_use_drop:N \l_@@_internal_box }
 %    \end{macrocode}
 %   The final task is to move the poles and corners such that they are
 %   back in alignment with the box reference point.
