--- a/l3kernel/l3box.dtx
+++ b/l3kernel/l3box.dtx
@@ -179,7 +179,11 @@
 %   \end{texnote}
 % \end{function}
 %
-% \begin{function}[updated = 2011-10-22]{\box_set_dp:Nn, \box_set_dp:cn}
+% \begin{function}[updated = 2019-01-22]
+%   {
+%     \box_set_dp:Nn, \box_set_dp:cn,
+%     \box_gset_dp:Nn, \box_gset_dp:cn
+%   }
 %   \begin{syntax}
 %     \cs{box_set_dp:Nn} \meta{box} \Arg{dimension expression}
 %   \end{syntax}
@@ -187,7 +191,11 @@
 %   the \Arg{dimension expression}.
 % \end{function}
 %
-% \begin{function}[updated = 2011-10-22]{\box_set_ht:Nn, \box_set_ht:cn}
+% \begin{function}[updated = 2019-01-22]
+%   {
+%     \box_set_ht:Nn, \box_set_ht:cn,
+%     \box_gset_ht:Nn, \box_gset_ht:cn
+%   }
 %   \begin{syntax}
 %     \cs{box_set_ht:Nn} \meta{box} \Arg{dimension expression}
 %   \end{syntax}
@@ -195,7 +203,11 @@
 %   the \Arg{dimension expression}.
 % \end{function}
 %
-% \begin{function}[updated = 2011-10-22]{\box_set_wd:Nn, \box_set_wd:cn}
+% \begin{function}[updated = 2019-01-22]
+%   {
+%     \box_set_wd:Nn, \box_set_wd:cn,
+%     \box_gset_wd:Nn, \box_gset_wd:cn
+%   }
 %   \begin{syntax}
 %     \cs{box_set_wd:Nn} \meta{box} \Arg{dimension expression}
 %   \end{syntax}
@@ -1029,20 +1041,38 @@
 % \begin{macro}{\box_set_ht:Nn, \box_set_ht:cn}
 % \begin{macro}{\box_set_dp:Nn, \box_set_dp:cn}
 % \begin{macro}{\box_set_wd:Nn, \box_set_wd:cn}
-%   Setting the size is easy: all primitive work. These primitives are not
-%   expandable, so the derived functions are not either.
+%   Setting the size whilst respecting local scope requires copying;
+%   the same issue does not come up when working globally.
 %   When debugging, the dimension expression |#2| is surrounded by
 %   parentheses to catch early termination.
 %    \begin{macrocode}
 \cs_new_protected:Npn \box_set_dp:Nn #1#2
-  { \box_dp:N #1 \@@_dim_eval:n {#2} }
-\cs_new_protected:Npn \box_set_ht:Nn #1#2
-  { \box_ht:N #1 \@@_dim_eval:n {#2} }
-\cs_new_protected:Npn \box_set_wd:Nn #1#2
-  { \box_wd:N #1 \@@_dim_eval:n {#2} }
-\cs_generate_variant:Nn \box_set_ht:Nn { c }
+  {
+    \tex_setbox:D #1 = \tex_copy:D #1
+    \box_dp:N #1 \@@_dim_eval:n {#2}
+  }
 \cs_generate_variant:Nn \box_set_dp:Nn { c }
+\cs_new_protected:Npn \box_gset_dp:Nn #1#2
+  { \box_dp:N #1 \@@_dim_eval:n {#2} }
+\cs_generate_variant:Nn \box_gset_dp:Nn { c }
+\cs_new_protected:Npn \box_set_ht:Nn #1#2
+  {
+    \tex_setbox:D #1 = \tex_copy:D #1
+    \box_ht:N #1 \@@_dim_eval:n {#2}
+  }
+\cs_generate_variant:Nn \box_set_ht:Nn { c }
+\cs_new_protected:Npn \box_gset_ht:Nn #1#2
+  { \box_ht:N #1 \@@_dim_eval:n {#2} }
+\cs_generate_variant:Nn \box_gset_ht:Nn { c }
+\cs_new_protected:Npn \box_set_wd:Nn #1#2
+  {
+    \tex_setbox:D #1 = \tex_copy:D #1
+    \box_wd:N #1 \@@_dim_eval:n {#2}
+  }
 \cs_generate_variant:Nn \box_set_wd:Nn { c }
+\cs_new_protected:Npn \box_gset_wd:Nn #1#2
+  { \box_wd:N #1 \@@_dim_eval:n {#2} }
+\cs_generate_variant:Nn \box_gset_wd:Nn { c }
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
