Extend box trim operations to provide global versions

--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -143,14 +143,15 @@
 %
 % \subsection{Viewing part of a box}
 %
-% \begin{function}{\box_clip:N, \box_clip:c}
+% \begin{function}[updated = 2019-01-23]
+%   {\box_clip:N, \box_clip:c, \box_gclip:N, \box_gclip:c}
 %   \begin{syntax}
 %     \cs{box_clip:N} \meta{box}
 %   \end{syntax}
 %   Clips the \meta{box} in the output so that only material inside the
 %   bounding box is displayed in the output. The updated \meta{box} is an
 %   hbox, irrespective of the nature of the \meta{box} before the clipping is
-%   applied. The clipping applies within the current \TeX{} group level.
+%   applied.
 %
 %   \textbf{These functions require the \LaTeX3 native drivers: they do
 %   not work with the \LaTeXe{} \pkg{graphics} drivers!}
@@ -163,7 +164,11 @@
 %   \end{texnote}
 % \end{function}
 %
-% \begin{function}{\box_trim:Nnnnn, \box_trim:cnnnn}
+% \begin{function}[updated = 2019-01-23]
+%   {
+%     \box_trim:Nnnnn, \box_trim:cnnnn,
+%     \box_gtrim:Nnnnn, \box_gtrim:cnnnn
+%   }
 %   \begin{syntax}
 %     \cs{box_trim:Nnnnn} \meta{box} \Arg{left} \Arg{bottom} \Arg{right} \Arg{top}
 %   \end{syntax}
@@ -174,12 +179,16 @@
 %   unless \cs{box_clip:N} is subsequently applied.
 %   The updated \meta{box} is an
 %   hbox, irrespective of the nature of the \meta{box} before the trim
-%   operation is applied. The adjustment applies within the current \TeX{}
-%   group level. The behavior of the operation where the trims requested is
+%   operation is applied.
+%   The behavior of the operation where the trims requested is
 %   greater than the size of the box is undefined.
 % \end{function}
 %
-% \begin{function}{\box_viewport:Nnnnn, \box_viewport:cnnnn}
+% \begin{function}[updated = 2019-01-23]
+%   {
+%     \box_viewport:Nnnnn, \box_viewport:cnnnn,
+%     \box_gviewport:Nnnnn, \box_gviewport:cnnnn
+%   }
 %   \begin{syntax}
 %     \cs{box_viewport:Nnnnn} \meta{box} \Arg{llx} \Arg{lly} \Arg{urx} \Arg{ury}
 %   \end{syntax}
@@ -191,8 +200,7 @@
 %   subsequently applied.
 %   The updated \meta{box} is an
 %   hbox, irrespective of the nature of the \meta{box} before the viewport
-%   operation is applied. The adjustment applies within the current \TeX{}
-%   group level.
+%   operation is applied.
 % \end{function}
 %
 % \section{Additions to \pkg{l3coffins}}
@@ -1487,20 +1495,34 @@
 %
 % \subsubsection{Viewing part of a box}
 %
-% \begin{macro}{\box_clip:N, \box_clip:c}
+% \begin{macro}{\box_clip:N, \box_clip:c, \box_gclip:N, \box_gclip:c}
 %   A wrapper around the driver-dependent code.
 %    \begin{macrocode}
 \cs_new_protected:Npn \box_clip:N #1
   { \hbox_set:Nn #1 { \driver_box_use_clip:N #1 } }
 \cs_generate_variant:Nn \box_clip:N { c }
+\cs_new_protected:Npn \box_gclip:N #1
+  { \hbox_gset:Nn #1 { \driver_box_use_clip:N #1 } }
+\cs_generate_variant:Nn \box_gclip:N { c }
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}{\box_trim:Nnnnn, \box_trim:cnnnn}
+% \begin{macro}
+%   {
+%     \box_trim:Nnnnn, \box_trim:cnnnn,
+%     \box_gtrim:Nnnnn, \box_gtrim:cnnnn
+%   }
+% \begin{macro}{\@@_trim:NnnnnN}
 %   Trimming from the left- and right-hand edges of the box is easy: kern the
 %   appropriate parts off each side.
 %    \begin{macrocode}
 \cs_new_protected:Npn \box_trim:Nnnnn #1#2#3#4#5
+  { \@@_trim:NnnnnN #1 {#2} {#3} {#4} {#5} \box_set_eq:NN }
+\cs_generate_variant:Nn \box_trim:Nnnnn { c }
+\cs_new_protected:Npn \box_gtrim:Nnnnn #1#2#3#4#5
+  { \@@_trim:NnnnnN #1 {#2} {#3} {#4} {#5} \box_gset_eq:NN }
+\cs_generate_variant:Nn \box_gtrim:Nnnnn { c }
+\cs_new_protected:Npn \@@_trim:NnnnnN #1#2#3#4#5#6
   {
     \hbox_set:Nn \l_@@_internal_box
       {
@@ -1555,18 +1577,29 @@
           }
         \box_set_ht:Nn \l_@@_internal_box \c_zero_dim
       }
-    \box_set_eq:NN #1 \l_@@_internal_box
+    #6 #1 \l_@@_internal_box
   }
-\cs_generate_variant:Nn \box_trim:Nnnnn { c }
 %    \end{macrocode}
 % \end{macro}
+% \end{macro}
 %
-% \begin{macro}{\box_viewport:Nnnnn, \box_viewport:cnnnn}
+% \begin{macro}
+%   {
+%     \box_viewport:Nnnnn, \box_viewport:cnnnn,
+%     \box_gviewport:Nnnnn, \box_gviewport:cnnnn
+%   }
+% \begin{macro}{\@@_viewport:NnnnnN}
 %   The same general logic as for the trim operation, but with absolute
 %   dimensions. As a result, there are some things to watch out for in the
 %   vertical direction.
 %    \begin{macrocode}
 \cs_new_protected:Npn \box_viewport:Nnnnn #1#2#3#4#5
+  { \@@_viewport:NnnnnN #1 {#2} {#3} {#4} {#5} \box_set_eq:NN }
+\cs_generate_variant:Nn \box_viewport:Nnnnn { c }
+\cs_new_protected:Npn \box_gviewport:Nnnnn #1#2#3#4#5
+  { \@@_viewport:NnnnnN #1 {#2} {#3} {#4} {#5} \box_gset_eq:NN }
+\cs_generate_variant:Nn \box_gviewport:Nnnnn { c }
+\cs_new_protected:Npn \@@_viewport:NnnnnN #1#2#3#4#5#6
   {
     \hbox_set:Nn \l_@@_internal_box
       {
@@ -1610,10 +1643,10 @@
           }
         \box_set_ht:Nn \l_@@_internal_box \c_zero_dim
       }
-    \box_set_eq:NN #1 \l_@@_internal_box
+    #6 #1 \l_@@_internal_box
   }
-\cs_generate_variant:Nn \box_viewport:Nnnnn { c }
 %    \end{macrocode}
+% \end{macro}
 % \end{macro}
 %
 % \subsection{Additions to \pkg{l3coffins}}
