Typos [ci skip]

--- a/l3kernel/l3box.dtx
+++ b/l3kernel/l3box.dtx
@@ -684,7 +684,7 @@
 %   height of the original and \emph{vice versa}.
 % \end{function}
 %
-% \begin{function}[added = 2017-04-04, updated = 2019-01-22]]
+% \begin{function}[added = 2017-04-04, updated = 2019-01-22]
 %   {
 %     \box_autosize_to_wd_and_ht_plus_dp:Nnn,
 %     \box_autosize_to_wd_and_ht_plus_dp:cnn,
@@ -2213,7 +2213,6 @@
       }
   }
 %    \end{macrocode}
-% \end{macro}
 % \end{macro}
 % \end{macro}
 %
