Add global scratch coffins

--- a/l3kernel/l3coffins.dtx
+++ b/l3kernel/l3coffins.dtx
@@ -356,6 +356,13 @@
 %   code and so should only be used for short-term storage.
 % \end{variable}
 %
+% \begin{variable}[added = 2019-01-24]{\g_tmpa_coffin, \g_tmpb_coffin}
+%   Scratch coffins for global assignment. These are never used by
+%   the kernel code, and so are safe for use with any \LaTeX3-defined
+%   function. However, they may be overwritten by other non-kernel
+%   code and so should only be used for short-term storage.
+% \end{variable}
+%
 % \end{documentation}
 %
 % \begin{implementation}
@@ -820,11 +827,14 @@
 % \end{variable}
 % \end{variable}
 %
-% \begin{variable}{\l_tmpa_coffin, \l_tmpb_coffin}
+% \begin{variable}
+%   {\l_tmpa_coffin, \l_tmpb_coffin, \g_tmpa_coffin, \g_tmpb_coffin}
 %   The usual scratch space.
 %    \begin{macrocode}
 \coffin_new:N \l_tmpa_coffin
 \coffin_new:N \l_tmpb_coffin
+\coffin_new:N \g_tmpa_coffin
+\coffin_new:N \g_tmpb_coffin
 %    \end{macrocode}
 % \end{variable}
 %
