--- a/l3kernel/l3coffins.dtx
+++ b/l3kernel/l3coffins.dtx
@@ -981,41 +981,50 @@
 %
 % \begin{macro}{\@@_update_corners:N, \@@_gupdate_corners:N}
 % \begin{macro}{\@@_update_corners:NN}
+% \begin{macro}{\@@_update_corners:NNN}
 %   Updating the corners of a coffin is straight-forward as at this stage
 %   there can be no rotation. So the corners of the content are just those
 %   of the underlying \TeX{} box.
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_update_corners:N #1
-  { \@@_update_corners:NN #1 \prop_put:cnx }
+  { \@@_update_corners:NN #1 \prop_put:Nnx }
 \cs_new_protected:Npn \@@_gupdate_corners:N #1
-  { \@@_update_corners:NN #1 \prop_gput:cnx }
+  { \@@_update_corners:NN #1 \prop_gput:Nnx }
 \cs_new_protected:Npn \@@_update_corners:NN #1#2
   {
-    #2 { coffin ~ \@@_to_value:N #1 ~ corners }
+    \exp_args:Nc \@@_update_corners:NNN
+      { coffin ~ \@@_to_value:N #1 ~ corners }
+      #1 #2
+  }
+\cs_new_protected:Npn \@@_update_corners:NNN #1#2#3
+  {
+    #3 #1
       { tl }
-      { { 0pt } { \dim_eval:n { \box_ht:N #1 } } }
-    #2 { coffin ~ \@@_to_value:N #1 ~ corners }
+      { { 0pt } { \dim_eval:n { \box_ht:N #2 } } }
+    #3 #1
       { tr }
       {
-        { \dim_eval:n { \box_wd:N #1 } }
-        { \dim_eval:n { \box_ht:N #1 } }
+        { \dim_eval:n { \box_wd:N #2 } }
+        { \dim_eval:n { \box_ht:N #2 } }
       }
-    #2 { coffin ~ \@@_to_value:N #1 ~ corners }
+    #3 #1
       { bl }
-      { { 0pt } { \dim_eval:n { -\box_dp:N #1 } } }
-    #2 { coffin ~ \@@_to_value:N #1 ~ corners }
+      { { 0pt } { \dim_eval:n { -\box_dp:N #2 } } }
+    #3 #1
       { br }
       {
-        { \dim_eval:n { \box_wd:N #1 } }
-        { \dim_eval:n { -\box_dp:N #1 } }
+        { \dim_eval:n { \box_wd:N #2 } }
+        { \dim_eval:n { -\box_dp:N #2 } }
       }
   }
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
+% \end{macro}
 %
 % \begin{macro}{\@@_update_poles:N, \@@_gupdate_poles:N}
 % \begin{macro}{\@@_update_poles:NN}
+% \begin{macro}{\@@_update_poles:NNN}
 %   This function is called when a coffin is set, and updates the poles to
 %   reflect the nature of size of the box. Thus this function only alters
 %   poles where the default position is dependent on the size of the box.
@@ -1028,39 +1037,47 @@
   { \@@_update_poles:NN #1 \prop_gput:cnx }
 \cs_new_protected:Npn \@@_update_poles:NN #1#2
   {
-    #2 { coffin ~ \@@_to_value:N #1 ~ poles } { hc }
+    \exp_args:Nc \@@_update_poles:NNN
+      { coffin ~ \@@_to_value:N #1 ~ poles }
+      #1 #2
+  }
+\cs_new_protected:Npn \@@_update_poles:NNN #1#2#3
+  {
+    #3 #1 { hc }
       {
-        { \dim_eval:n { 0.5 \box_wd:N #1 } }
+        { \dim_eval:n { 0.5 \box_wd:N #2 } }
         { 0pt } { 0pt } { 1000pt }
       }
-    #2 { coffin ~ \@@_to_value:N #1 ~ poles } { r }
+    #3 #1 { r }
       {
-        { \dim_eval:n { \box_wd:N #1 } }
+        { \dim_eval:n { \box_wd:N #2 } }
         { 0pt } { 0pt } { 1000pt }
       }
-    #2 { coffin ~ \@@_to_value:N #1 ~ poles } { vc }
+    #3 #1 { vc }
       {
         { 0pt }
-        { \dim_eval:n { ( \box_ht:N #1 - \box_dp:N #1 ) / 2 } }
+        { \dim_eval:n { ( \box_ht:N #2 - \box_dp:N #2 ) / 2 } }
         { 1000pt }
         { 0pt }
       }
-    #2 { coffin ~ \@@_to_value:N #1 ~ poles } { t }
+    #3 #1 { t }
       {
         { 0pt }
-        { \dim_eval:n { \box_ht:N #1 } }
+        { \dim_eval:n { \box_ht:N #2 } }
         { 1000pt }
         { 0pt }
       }
-    #2 { coffin ~ \@@_to_value:N #1 ~ poles } { b }
+    #3 #1 { b }
       {
         { 0pt }
-        { \dim_eval:n { -\box_dp:N #1 } }
+        { \dim_eval:n { -\box_dp:N #2 } }
         { 1000pt }
         { 0pt }
       }
   }
 %    \end{macrocode}
+% \end{macro}
+% \end{macro}
 % \end{macro}
 %
 % \subsection{Coffins: calculation of pole intersections}
