--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -217,7 +217,7 @@
 %   both of which should be given as dimension expressions.
 % \end{function}
 %
-% \begin{function}[updated = 2019-01-23]
+% \begin{function}
 %   {
 %     \coffin_rotate:Nn, \coffin_rotate:cn,
 %     \coffin_grotate:Nn, \coffin_grotate:cn
@@ -231,7 +231,7 @@
 %   the bounding box of the coffin growing unnecessarily.
 % \end{function}
 %
-% \begin{function}\coffin_rotate:Nn, \coffin_rotate:cn
+% \begin{function}[updated = 2019-01-23]
 %   {
 %     \coffin_scale:Nnn, \coffin_scale:cnn,
 %     \coffin_gscale:Nnn, \coffin_gscale:cnn
